@@ -5,7 +5,7 @@
 
 /* snoop control */
 
-char const *cvs_id = "$Id: snoopctl.c,v 1.5 2005-06-28 14:48:28 bodea Exp $";
+char const *cvs_id = "$Id: snoopctl.c,v 1.6 2005-10-11 07:59:09 bodea Exp $";
 
 int plugin_api_version = PLUGIN_API_VERSION;
 static struct pluginfuncs *p = 0;
@@ -114,13 +114,6 @@ int plugin_control(struct param_control *data)
 	data->additional = 0;
 
 	return PLUGIN_RET_STOP;
-}
-
-int plugin_radius_reset(struct param_radius_reset *data)
-{
-	data->s->snoop_ip = 0;
-	data->s->snoop_port = 0;
-	return PLUGIN_RET_OK;
 }
 
 int plugin_init(struct pluginfuncs *funcs)
